--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -6,4 +6,15 @@ workflows:
         script: ./gradlew assembleRelease
     artifacts:
       - app/build/outputs/**/**/*.apk
+workflows:
+  my-workflow:
+    triggering:
+      events:
+        - push
+      branch_patterns: 
+        - pattern: dev
+        - pattern: develop
+          include: false
+      cancel_previous_builds: true
+      
 
